@@ -1,3 +1,8 @@
+2001-09-28  Gonzalo Paniagua Javier <gonzalo@torresquevedo.hispalinux.es>
+
+	* gda-mysql-connection.c: set correctly error messages when failing
+	because of incompatible options in the connection string
+
 2001-07-15  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gda-mysql-connection.c (gda_mysql_connection_open_schema): return
